# mcp-graphify-autotrigger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
autotrigger/: __init__.py  classifier.py  cleanup.py  delegate.py  graphify.py  preflight.py
docs/: AUTONOMY_DOCTRINE.md
examples/: agent_run_patch.py  post_chunk_hook.py
mcp_server/: __init__.py  agent_tools.py  server.py
plugins/: README.md  chharbot-tools.plugin
skills/autotrigger/: SKILL.md
skills/bundles/: autotrigger.skill  graphify.skill
skills/graphify/: SKILL.md
skills/installers/: install-cowork-skills.bat  install-cowork-skills.ps1
tests/: test_agent_tools.py  test_classifier.py  test_cleanup.py  test_delegate.py
tests/security/: test_classifier_security.py  test_delegate_security.py
